Add sid nav component

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Smart Auto</title>
-    <script type="module" src="./js/components/car-list-container/car-list-container.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
 </head>
 <body>
-    <h1>Smart Auto</h1>
-    <button>Logout</button>
-    <car-list-container></car-list-container>
-    <script type="module">
-        const container = document.querySelector('car-list-container');
-        container.load();
-
-        document.querySelector('button').addEventListener('click', () => location.href = '/smart-auto/logout');
-    </script>
+    <div class="layout">
+        <h1>Smart Auto</h1>
+        <side-nav></side-nav>
+        <car-list-container></car-list-container>
+    </div>
+    <script type="module" src="./service/index-service.js"></script>
+    <script type="module" src="./js/components/side-nav/side-nav.js"></script>
+    <script type="module" src="./js/components/car-list-container/car-list-container.js"></script>
 </body>
 </html>
