--- a/src/main/webapp/add-car.html
+++ b/src/main/webapp/add-car.html
@@ -11,7 +11,7 @@
     <div class="layout">
         <h1>Smart Auto</h1>
         <div style="padding-bottom: 20px;">
-            <button id="sales-button" style="font-size: 16px;">Home</button>
+            <button id="home-button" style="font-size: 16px;">Home</button>
         </div>
         <side-nav></side-nav>
         <add-new-car style="padding-left:20px;"></add-new-car>
